--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide slide" style="background:url(/digital marketing/image/banner2.jpg) no-repeat">
+            <div class="swiper-slide slide" style="background:url(digital marketing/banner2.jpg) no-repeat">
                 <div class="content">
                     <span>upto 50% off</span>
                     <h3>men's Fashion</h3>
