--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="swiper-wrapper">
 
-            <div class="swiper-slide slide" style="background:url(/digital marketing/image/banner1.jpg) no-repeat">
+            <div class="swiper-slide slide" style="background:url(image/banner1.jpg) no-repeat">
                 <div class="content">
                     <span>upto 50% off</span>
                     <h3>women's Fashion</h3>
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide slide" style="background:url(digital marketing/banner2.jpg) no-repeat">
+            <div class="swiper-slide slide" style="background:url(image/banner2.jpg) no-repeat">
                 <div class="content">
                     <span>upto 50% off</span>
                     <h3>men's Fashion</h3>
