--- a/index.html
+++ b/index.html
@@ -778,14 +778,14 @@
         <div class="icons">
             <i class="fas fa-map-marker-alt"></i>
             <h3>address</h3>
-            <p>jogeshwari, mumbai, india - 400104</p>
+            <p>Ahmeddabad,Gujarat, india - 382345</p>
         </div>
 
         <div class="icons">
             <i class="fas fa-envelope"></i>
             <h3>email</h3>
-            <p>shaikhanas@gmail.com</p>
-            <p>anasbhai@gmail.com</p>
+            <p>korinikhil2005@gmail.com</p>
+            <p>korinikhil2004@gmail.com</p>
         </div>
 
         <div class="icons">
