--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
         <a href="#" class="fab fa-twitter"></a>
         <a href="#" class="fab fa-pinterest"></a>
         <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-instagram"></a>
+        <a href="https://www.instagram.com/itz___nikhil___07/" class="fab fa-instagram"></a>
     </div>
 
     <div class="credit"> &copy; copyright @ 2021 by <span>mr. web designer</span> </div>
